<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"

    tools:context=".MainActivity">

    <EditText
        android:id="@+id/back2"
        android:layout_width="526dp"
        android:layout_height="453dp"
        android:background="@drawable/circle2"
        android:gravity="center"
        android:minWidth="100dp"
        android:padding="100dp"
        tools:ignore="InvalidId,MissingConstraints"
        tools:layout_editor_absoluteX="-58dp"
        tools:layout_editor_absoluteY="-143dp" />

    <EditText
        android:id="@+id/back1"
        android:layout_width="526dp"
        android:layout_height="453dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:minWidth="100dp"
        android:padding="100dp"
        tools:ignore="InvalidId,MissingConstraints"
        tools:layout_editor_absoluteX="-58dp"
        tools:layout_editor_absoluteY="-161dp" />


    <TextView
        android:layout_width="271dp"
        android:layout_height="97dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/almarai_font"
        android:gravity="center"
        android:text="@string/welcom"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="45sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:layout_width="271dp"
        android:layout_height="97dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/almarai_font"
        android:gravity="center"
        android:text="@string/mytrain"
        android:textColor="@color/blue"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="140dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="256dp"
        android:background="@color/blue"
        android:fontFamily="@font/almarai_font"
        android:padding="10dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/light_dark"
        android:fontFamily="@font/almarai_font"
        android:padding="10dp"
        android:text="@string/longin"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>